{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 61,
  "lineage": "48146a1f-7962-2e98-1c6e-6a62d7592dca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954234341308:internet-gateway/igw-058bc3e0aa1631b2b",
            "id": "igw-058bc3e0aa1631b2b",
            "owner_id": "954234341308",
            "tags": {
              "Name": "dario-igw"
            },
            "tags_all": {
              "Name": "dario-igw"
            },
            "vpc_id": "vpc-08368160324ab91c6"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954234341308:route-table/rtb-045893e3e55cbb243",
            "id": "rtb-045893e3e55cbb243",
            "owner_id": "954234341308",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-058bc3e0aa1631b2b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dario-route-table"
            },
            "tags_all": {
              "Name": "dario-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08368160324ab91c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.new_igw",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d5f36397804aa37",
            "route_table_id": "rtb-045893e3e55cbb243",
            "subnet_id": "subnet-06eeebf46ad28e888"
          },
          "dependencies": [
            "aws_internet_gateway.new_igw",
            "aws_route_table.new_route_table",
            "aws_subnet.subnets",
            "aws_vpc.aws-vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07809f1fa9b90fd95",
            "route_table_id": "rtb-045893e3e55cbb243",
            "subnet_id": "subnet-07b2ce3ade80e8b01"
          },
          "dependencies": [
            "aws_internet_gateway.new_igw",
            "aws_route_table.new_route_table",
            "aws_subnet.subnets",
            "aws_vpc.aws-vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954234341308:security-group/sg-01895ce43210a9f69",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01895ce43210a9f69",
            "ingress": [],
            "name": "terraform-20250401173419023200000001",
            "name_prefix": "terraform-",
            "owner_id": "954234341308",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dario-sg"
            },
            "tags_all": {
              "Name": "dario-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08368160324ab91c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954234341308:subnet/subnet-06eeebf46ad28e888",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06eeebf46ad28e888",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "954234341308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dario-subnet-0"
            },
            "tags_all": {
              "Name": "dario-subnet-0"
            },
            "vpc_id": "vpc-08368160324ab91c6"
          },
          "dependencies": [
            "aws_vpc.aws-vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954234341308:subnet/subnet-07b2ce3ade80e8b01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b2ce3ade80e8b01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "954234341308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dario-subnet-1"
            },
            "tags_all": {
              "Name": "dario-subnet-1"
            },
            "vpc_id": "vpc-08368160324ab91c6"
          },
          "dependencies": [
            "aws_vpc.aws-vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954234341308:vpc/vpc-08368160324ab91c6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ff7e397e4cad88bd",
            "default_route_table_id": "rtb-03a1bac5891fdeb43",
            "default_security_group_id": "sg-0da9b033ea79f0f7f",
            "dhcp_options_id": "dopt-042f64ee205281c42",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08368160324ab91c6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03a1bac5891fdeb43",
            "owner_id": "954234341308",
            "tags": {
              "Name": "dario-vpc"
            },
            "tags_all": {
              "Name": "dario-vpc"
            }
          }
        }
      ]
    }
  ]
}